リンクパス修正
作品リンクのパスをgh-pages用に修正

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="wrap">
         <p id="works" class="title">Works</p>
         <div class="con_wrap">
-            <a href="/html/work1.html">
+            <a href="/2016portfolio/html/work1.html">
                 <div id="con1" class="contents">
                     <div class="con_hover">
                         <div class="textbox">
@@ -44,7 +44,7 @@
                     </div>
                 </div>
             </a>
-            <a href="/html/work2.html">
+            <a href="/2016portfolio/html/work2.html">
                 <div id="con2" class="contents">
                     <div class="con_hover">
                         <div class="textbox">
@@ -54,7 +54,7 @@
                     </div>
                 </div>
             </a>
-            <a href="/html/work3.html">
+            <a href="/2016portfolio/html/work3.html">
                 <div id="con3" class="contents">
                     <div class="con_hover">
                         <div class="textbox">
@@ -64,7 +64,7 @@
                     </div>
                 </div>
             </a>
-            <a href="/html/work4.html">
+            <a href="/2016portfolio/html/work4.html">
                 <div id="con4" class="contents">
                     <div class="con_hover">
                         <div class="textbox">
@@ -74,7 +74,7 @@
                     </div>
                 </div>
             </a>
-            <a href="/html/work5.html">
+            <a href="/2016portfolio/html/work5.html">
                 <div id="con5" class="contents">
                     <div class="con_hover">
                         <div class="textbox">
@@ -84,7 +84,7 @@
                     </div>
                 </div>
             </a>
-            <a href="/html/work6.html">
+            <a href="/2016portfolio/html/work6.html">
                 <div id="con6" class="contents">
                     <div class="con_hover">
                         <div class="textbox">
